Guardando cambios antes de corregir algo de eliminacion solicitado

--- a/views/configuration-panel/productos-admin.html
+++ b/views/configuration-panel/productos-admin.html
@@ -62,13 +62,13 @@
 
                 <label for="unidadMedicion">Unidad medición:</label>
                 <select type="text" id="unidadMedicion" name="unidadMedicion" required>
-                    <option value="Unidades">Unidades</option>
-                    <option value="Kilogramos">Kilogramos</option>
-                    <option value="Gramos">Gramos</option>   
-                    <option value="Litros">Litros</option>
-                    <option value="Mililitros">Mililitros</option>
-                    <option value="Onzas">Onzas</option>
-                    <option value="Centímetros cúbicos">Centímetros cúbicos</option>
+                    <option value="Unidad">Unidad</option>
+                    <option value="Kilogramo">Kilogramo</option>
+                    <option value="Gramo">Gramo</option>   
+                    <option value="Litro">Litro</option>
+                    <option value="Mililitro">Mililitro</option>
+                    <option value="Onza">Onza</option>
+                    <option value="Centímetro cúbico">Centímetro cúbico</option>
                 </select>
                 <label for="categorias">Categoría:</label>
                 <select id="categorias" name="categorias" required>
