--- a/public/CSS/dashboard-css/dashboard.css
+++ b/public/CSS/dashboard-css/dashboard.css
@@ -141,7 +141,12 @@ header {
     font-weight: bold;
 }
 
-.add-product-btn, .add-user-btn, .add-supplier-btn, .add-category-btn, .add-proveedor-btn, .add-invoice-btn {
+.add-product-btn,
+.add-user-btn,
+.add-supplier-btn,
+.add-category-btn,
+.add-proveedor-btn,
+.add-invoice-btn {
     background-color: var(--secondary-color);
     color: var(--background-color);
     border: none;
@@ -154,7 +159,12 @@ header {
     justify-content: center;
 }
 
-.add-product-btn:hover, .add-supplier-btn:hover, .add-user-btn:hover, .add-category-btn:hover, .add-proveedor-btn:hover, .add-invoice-btn:hover {
+.add-product-btn:hover,
+.add-supplier-btn:hover,
+.add-user-btn:hover,
+.add-category-btn:hover,
+.add-proveedor-btn:hover,
+.add-invoice-btn:hover {
     background-color: #7a1bd2;
 }
 
@@ -173,14 +183,19 @@ header {
     background-color: var(--secondary-color);
     color: var(--background-color);
     border: none;
-    padding: 10px 15px; /* Añadir un poco de padding al botón */
-    border-radius: 4px; /* Bordes redondeados para el botón */
-    cursor: pointer; /* Cambiar cursor al pasar sobre el botón */
-    transition: background-color 0.3s ease; /* Transición suave para el color de fondo */
+    padding: 10px 15px;
+    /* Añadir un poco de padding al botón */
+    border-radius: 4px;
+    /* Bordes redondeados para el botón */
+    cursor: pointer;
+    /* Cambiar cursor al pasar sobre el botón */
+    transition: background-color 0.3s ease;
+    /* Transición suave para el color de fondo */
 }
 
 .search-bar button:hover {
-    background-color: #7a1bd2; /* Color del botón al pasar el ratón */
+    background-color: #7a1bd2;
+    /* Color del botón al pasar el ratón */
 }
 
 table {
@@ -203,8 +218,10 @@ th {
 
 /* Estilo general para las filas */
 tr {
-    border: 2px solid transparent; /* Establece un borde transparente por defecto */
-    transition: border-color 0.3s ease; /* Transición suave para el cambio de borde */
+    border: 2px solid transparent;
+    /* Establece un borde transparente por defecto */
+    transition: border-color 0.3s ease;
+    /* Transición suave para el cambio de borde */
 }
 
 /* Estilo para las filas con índice par (even) */
@@ -215,27 +232,38 @@ tr:nth-child(even) {
 /* Efecto hover para cambiar el color del borde */
 tr:hover {
     border-radius: 5px;
-    box-shadow: 0 0 15px 5px rgba(136, 0, 255, 0.6); /* Efecto de neón con sombra roja */
-    transform: scale(1.01); /* Escalado leve para mayor efecto visual */
+    box-shadow: 0 0 15px 5px rgba(136, 0, 255, 0.6);
+    /* Efecto de neón con sombra roja */
+    transform: scale(1.01);
+    /* Escalado leve para mayor efecto visual */
 }
 
 /* Estilo para las filas con bajo stock (cantidad <= 10) */
 .low-stock {
-    background: linear-gradient(45deg, #ff0000be, #ff7f7f); /* Gradiente en diagonal */
-    color: white; /* Texto en blanco */
+    background: linear-gradient(45deg, #ff0000be, #ff7f7f);
+    /* Gradiente en diagonal */
+    color: white;
+    /* Texto en blanco */
     padding: 10px;
     border: 2px solid transparent;
-    border-radius: 10px; /* Bordes redondeados */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra suave */
-    transition: background 0.5s ease, box-shadow 0.3s ease, border 0.3s ease; /* Transición suave */
+    border-radius: 10px;
+    /* Bordes redondeados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* Sombra suave */
+    transition: background 0.5s ease, box-shadow 0.3s ease, border 0.3s ease;
+    /* Transición suave */
 }
 
 /* Efecto hover */
 .low-stock:hover {
-    background: linear-gradient(45deg, #ff0000be, #ff7f7f); /* Mantén el gradiente en hover */
-    box-shadow: 0 0 15px 5px rgba(255, 0, 0, 0.6); /* Efecto de neón con sombra roja */
-    border: 2px solid transparent; /* Borde rojo brillante */
-    transform: scale(1.01); /* Escalado leve para mayor efecto visual */
+    background: linear-gradient(45deg, #ff0000be, #ff7f7f);
+    /* Mantén el gradiente en hover */
+    box-shadow: 0 0 15px 5px rgba(255, 0, 0, 0.6);
+    /* Efecto de neón con sombra roja */
+    border: 2px solid transparent;
+    /* Borde rojo brillante */
+    transform: scale(1.01);
+    /* Escalado leve para mayor efecto visual */
 }
 
 .action-icons {
@@ -253,7 +281,8 @@ tr:hover {
     align-items: center;
 }
 
-.pagination button, .close-btn {
+.pagination button,
+.close-btn {
     background-color: var(--primary-color);
     color: var(--background-color);
     border: none;
@@ -268,16 +297,47 @@ tr:hover {
 }
 
 select {
-    border: 2px solid #ccc; /* Color de borde inicial */
+    border: 2px solid #ccc;
+    /* Color de borde inicial */
     padding: 5px;
-    transition: border-color 0.3s; /* Transición suave al cambiar de borde */
+    transition: border-color 0.3s;
+    /* Transición suave al cambiar de borde */
     margin-bottom: 10px;
 }
 
 select:focus {
-    border-color: #8a2be2; /* Color de borde al hacer clic */
-    outline: none; /* Quitar el contorno */
+    border-color: #8a2be2;
+    /* Color de borde al hacer clic */
+    outline: none;
+    /* Quitar el contorno */
 }
+
+/* Estilos para las categorías inactivas */
+.categoria-inactiva {
+    color: gray;
+    /* Cambiar el color del texto */
+    font-style: italic;
+    /* Opcional: poner el texto en cursiva */
+    background-color: #f5f5f5;
+    /* Cambiar el color de fondo */
+    text-decoration: line-through;
+    /* Opcional: poner una línea a través del texto */
+}
+
+/* Estilos para las opciones deshabilitadas */
+option:disabled {
+    color: gray !important;
+    background-color: #f5f5f5 !important;
+    text-decoration: line-through !important;
+    font-style: italic;
+  }
+  
+  /* Estilo para la opción seleccionada */
+  select:disabled option:checked {
+    color: gray !important;
+    background-color: #e9e9e9 !important;
+    text-decoration: line-through !important;
+  }
 
 #more-options-arrow {
     transition: transform 0.3s ease;
@@ -315,25 +375,36 @@ select:focus {
 }
 
 .modal {
-    display: none; /* Oculto por defecto */
-    position: fixed; /* Fijo en la pantalla */
-    z-index: 1; /* Por encima de otros elementos */
+    display: none;
+    /* Oculto por defecto */
+    position: fixed;
+    /* Fijo en la pantalla */
+    z-index: 1;
+    /* Por encima de otros elementos */
     left: 0;
     top: 0;
-    width: 100%; /* Ancho completo */
-    height: 100%; /* Alto completo */
-    overflow: auto; /* Habilitar el desplazamiento si es necesario */
-    background-color: rgba(0, 0, 0, 0.4); /* Fondo oscuro con opacidad */
+    width: 100%;
+    /* Ancho completo */
+    height: 100%;
+    /* Alto completo */
+    overflow: auto;
+    /* Habilitar el desplazamiento si es necesario */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Fondo oscuro con opacidad */
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 10% auto; /* 10% desde la parte superior y centrado */
+    margin: 10% auto;
+    /* 10% desde la parte superior y centrado */
     padding: 20px;
     border: 1px solid #888;
-    border-radius: 8px; /* Bordes redondeados */
-    width: 400px; /* Ancho del modal */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); /* Sombra para profundidad */
+    border-radius: 8px;
+    /* Bordes redondeados */
+    width: 400px;
+    /* Ancho del modal */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    /* Sombra para profundidad */
 }
 
 .close {
@@ -351,59 +422,93 @@ select:focus {
 }
 
 h2 {
-    text-align: center; /* Centrar el título */
+    text-align: center;
+    /* Centrar el título */
 }
 
 form {
     display: flex;
-    flex-direction: column; /* Colocar los inputs uno debajo del otro */
-    gap: 10px; /* Espaciado entre los inputs */
+    flex-direction: column;
+    /* Colocar los inputs uno debajo del otro */
+    gap: 10px;
+    /* Espaciado entre los inputs */
 }
 
-input[type="text"],input[type="number"], input[type="password"], input[type="tel"], input[type="date"], input[type="email"], textarea{
+input[type="text"],
+input[type="number"],
+input[type="password"],
+input[type="tel"],
+input[type="date"],
+input[type="email"],
+textarea {
     padding: 10px;
-    border: 2px solid #ccc; /* Color de borde inicial */
-    border-radius: 5px; /* Bordes redondeados para los inputs */
-    transition: border-color 0.3s; /* Transición suave al cambiar de borde */
-    width: 100%; /* Asegura que el input siempre use el 100% del espacio disponible */
+    border: 2px solid #ccc;
+    /* Color de borde inicial */
+    border-radius: 5px;
+    /* Bordes redondeados para los inputs */
+    transition: border-color 0.3s;
+    /* Transición suave al cambiar de borde */
+    width: 100%;
+    /* Asegura que el input siempre use el 100% del espacio disponible */
 }
 
-input[type="text"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="tel"]:focus, input[type="date"]:focus, input[type="email"]:focus, textarea:focus {
-    border-color: #8a2be2; /* Color de borde al hacer clic */
-    outline: none; /* Quitar el contorno */
+input[type="text"]:focus,
+input[type="number"]:focus,
+input[type="password"]:focus,
+input[type="tel"]:focus,
+input[type="date"]:focus,
+input[type="email"]:focus,
+textarea:focus {
+    border-color: #8a2be2;
+    /* Color de borde al hacer clic */
+    outline: none;
+    /* Quitar el contorno */
 }
 
 /* Asegura que ambos tipos, text y password, compartan el mismo padding cuando están en .password-container */
-.password-container input[type="text"], .password-container input[type="password"] {
-    width: 100%; /* Mantiene el input al 100% del espacio disponible */
-    padding-right: 40px; /* Añadir espacio suficiente para el icono */
+.password-container input[type="text"],
+.password-container input[type="password"] {
+    width: 100%;
+    /* Mantiene el input al 100% del espacio disponible */
+    padding-right: 40px;
+    /* Añadir espacio suficiente para el icono */
 }
 
 button[type="submit"] {
     padding: 10px;
-    background-color: #007bff; /* Color del botón similar a Bootstrap primary */
-    color: white; /* Texto blanco */
-    border: none; /* Sin borde */
-    border-radius: 5px; /* Bordes redondeados para el botón */
-    cursor: pointer; /* Cambiar el cursor a pointer */
-    font-size: 16px; /* Tamaño del texto */
-    transition: background-color 0.3s; /* Transición suave para el color de fondo */
+    background-color: #007bff;
+    /* Color del botón similar a Bootstrap primary */
+    color: white;
+    /* Texto blanco */
+    border: none;
+    /* Sin borde */
+    border-radius: 5px;
+    /* Bordes redondeados para el botón */
+    cursor: pointer;
+    /* Cambiar el cursor a pointer */
+    font-size: 16px;
+    /* Tamaño del texto */
+    transition: background-color 0.3s;
+    /* Transición suave para el color de fondo */
 }
 
 button[type="submit"]:hover {
-    background-color: #0056b3; /* Color al pasar el mouse sobre el botón */
+    background-color: #0056b3;
+    /* Color al pasar el mouse sobre el botón */
 }
 
 .password-container {
     position: relative;
-    display: flex; /* Asegura que el input y el icono se alineen juntos */
+    display: flex;
+    /* Asegura que el input y el icono se alineen juntos */
     align-items: center;
     width: 100%;
 }
 
 .toggle-password {
     position: absolute;
-    right: 10px; /* Coloca el icono justo dentro del borde derecho del input */
+    right: 10px;
+    /* Coloca el icono justo dentro del borde derecho del input */
     cursor: pointer;
 }
 
@@ -421,7 +526,8 @@ button[type="submit"]:hover {
     flex-wrap: wrap;
 }
 
-.filters select, .filters input {
+.filters select,
+.filters input {
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
