--- a/views/salida-producto/salida-admin.html
+++ b/views/salida-producto/salida-admin.html
@@ -20,10 +20,11 @@
 <table>
     <thead>
         <tr>
-            <th>ID Salida</th>
+           
             <th>Colaborador Sacando</th>
             <th>Colaborador Recibiendo</th>
             <th>Fecha de Salida</th>
+            <th>Usuario que registró</th>
             <th>Acciones</th>
         </tr>
     </thead>
