--- a/views/configuration-panel/entidades-financieras-admin.html
+++ b/views/configuration-panel/entidades-financieras-admin.html
@@ -40,18 +40,18 @@
         
     </div>
 
-    <div id="editarEntidadFinanceraModal" class="modal">
+    <div id="editarEntidadFinancieraModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="cerrarModal('editarEntidadFinancieraModal', 'editarEntidadFinancieraForm')">&times;</span>
             <h2 id="modalTitle"></h2>
             <form id="editarEntidadFinancieraForm" class="editar-entidad-financiera-form">
                 <input type="hidden" id="idEntidadFinanciera">
 
-                <label for="nombreEntidadFinanciera">Nombre:</label>
-                <input type="text" id="nombreEntidadFinanciera" name="nombreEntidadFinanciera">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre">
 
                 <label for="telefono">Teléfono:</label>
-                <input type="text" id="telefono" name="telefono">
+                <input type="text" id="telefono" name="telefono" min="8">
 
                 <label for="correo">Correo Electrónico:</label>
                 <input type="email" id="correo" name="correo">
@@ -60,7 +60,7 @@
                 <input type="text" id="tipo" name="tipo" required>
                 
                 <label for="fechaInicioFinanciamiento">Inicio Financiamiento:</label>
-                <input type="text" id="fechaInicioFinanciamiento" name="fechaInicioFinanciamiento">
+                <input type="date" id="fechaInicioFinanciamiento" name="fechaInicioFinanciamiento">
 
                 <p id="errorMessage" style="color: red;"></p>
 
@@ -69,4 +69,4 @@
         </div>
     </div>
 </div>
-</div>
+</div> 
