--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -14,7 +14,7 @@
 <body onload="showUserData()">
     <header>
         <div>Inicio</div>
-        <div class="logo">LOGO</div>
+        <div class="logo"><img src="../../public/assets/img/logo.png" alt="" style="width: 50px"></div>
     </header>
     <div class="main-container">
         <div class="sidebar">
