--- a/views/salida-producto/editar-salida.html
+++ b/views/salida-producto/editar-salida.html
@@ -152,13 +152,10 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 id="output-title">Editar Salida de Productos</h1>
     <div class="btn-group no-print">
-        <button class="btn btn-primary" onclick="printOutput()">
-            <i class="material-icons">print</i> Imprimir
-        </button>
         <button class="btn btn-secondary" onclick="saveOutput()">
             <i class="material-icons">save</i> Guardar
         </button>
-        <button class="btn btn-outline-primary" onclick="goBack()">
+        <button class="btn btn-outline-primary" onclick="adjuntarHTML('/salida-producto/salida-admin.html', cargarSalidasTabla)">
             <i class="material-icons">arrow_back</i> Volver
         </button>
     </div>
@@ -197,7 +194,7 @@
                     <div class="info-row">
                         <div class="info-label">Registrado por:</div>
                         <div class="info-value">
-                            <div class="readonly-value"></div>
+                            <div class="readonly-value" id="nombreUsuarioRegistro"></div>
                         </div>
                     </div>
                 </div>
@@ -216,19 +213,19 @@
                     <div class="info-row">
                         <div class="info-label">Nombre Completo:</div>
                         <div class="info-value">
-                            <select id="colaborado-entregando"></select>
+                            <select id="colaborador-entregando" onchange="actualizarDatosColaborador(this)"></select>
                         </div>
                     </div>
                     <div class="info-row">
                         <div class="info-label">Correo:</div>
                         <div class="info-value">
-                            <input type="email" class="form-control" id="correo-sacando">
+                            <input type="email" class="form-control" id="correo-sacando" disabled>
                         </div>
                     </div>
                     <div class="info-row">
                         <div class="info-label">Teléfono:</div>
                         <div class="info-value">
-                            <input type="text" class="form-control" id="telefono-sacando">
+                            <input type="text" class="form-control" id="telefono-sacando" disabled>
                         </div>
                     </div>
                 </div>
@@ -236,14 +233,14 @@
                     <div class="info-row">
                         <div class="info-label">Departamento:</div>
                         <div class="info-value">
-                            <input type="text" class="form-control" id="departamento-sacando">
+                            <input type="text" class="form-control" id="departamento-sacando" disabled>
                             <input type="hidden" id="id-departamento-sacando">
                         </div>
                     </div>
                     <div class="info-row">
                         <div class="info-label">Puesto:</div>
                         <div class="info-value">
-                            <input type="text" class="form-control" id="puesto-sacando">
+                            <input type="text" class="form-control" id="puesto-sacando" disabled>
                             <input type="hidden" id="id-puesto-sacando">
                         </div>
                     </div>
@@ -263,19 +260,19 @@
                     <div class="info-row">
                         <div class="info-label">Nombre Completo:</div>
                         <div class="info-value">
-                            <select id="colaborador-recibiendo"></select>
+                            <select id="colaborador-recibiendo" onchange="actualizarDatosColaborador(this)"></select>
                         </div>
                     </div>
                     <div class="info-row">
                         <div class="info-label">Correo:</div>
                         <div class="info-value">
-                            <input type="email" class="form-control" id="correo-recibiendo">
+                            <input type="email" class="form-control" id="correo-recibiendo" disabled>
                         </div>
                     </div>
                     <div class="info-row">
                         <div class="info-label">Teléfono:</div>
                         <div class="info-value">
-                            <input type="text" class="form-control" id="telefono-recibiendo">
+                            <input type="text" class="form-control" id="telefono-recibiendo" disabled>
                         </div>
                     </div>
                 </div>
@@ -283,14 +280,14 @@
                     <div class="info-row">
                         <div class="info-label">Departamento:</div>
                         <div class="info-value">
-                            <input type="text" class="form-control" id="departamento-recibiendo">
+                            <input type="text" class="form-control" id="departamento-recibiendo" disabled>
                             <input type="hidden" id="id-departamento-recibiendo">
                         </div>
                     </div>
                     <div class="info-row">
                         <div class="info-label">Puesto:</div>
                         <div class="info-value">
-                            <input type="text" class="form-control" id="puesto-recibiendo" value="Desarrollador">
+                            <input type="text" class="form-control" id="puesto-recibiendo" disabled>
                             <input type="hidden" id="id-puesto-recibiendo">
                         </div>
                     </div>
@@ -305,7 +302,7 @@
             <h5 class="card-title">Productos</h5>
         </div>
         <div class="card-body">
-            <button type="button" class="btn btn-outline-primary add-product-btn no-print" onclick="addProduct()">
+            <button type="button" class="btn btn-outline-primary add-product-btn no-print" onclick="addProductSalida()">
                 <i class="material-icons">add</i> Agregar Producto
             </button>
             <div class="table-responsive">
