--- a/views/salida-producto/editar-salida.html
+++ b/views/salida-producto/editar-salida.html
@@ -152,7 +152,7 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 id="output-title">Editar Salida de Productos</h1>
     <div class="btn-group no-print">
-        <button class="btn btn-secondary" onclick="saveOutput()">
+        <button class="btn btn-secondary" onclick="validarYRecolectarDatosSalidaProducto()">
             <i class="material-icons">save</i> Guardar
         </button>
         <button class="btn btn-outline-primary" onclick="adjuntarHTML('/salida-producto/salida-admin.html', cargarSalidasTabla)">
