Edición de entidades financieras completo.

--- a/views/configuration-panel/entidades-financieras-admin.html
+++ b/views/configuration-panel/entidades-financieras-admin.html
@@ -50,7 +50,7 @@
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre">
 
-                <label for="telefono">Teléfono:</label>
+                <label for="telefono">Teléfono (+506):</label>
                 <input type="text" id="telefono" name="telefono" min="8">
 
                 <label for="correo">Correo Electrónico:</label>
