--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -14,7 +14,7 @@
 <body onload="showUserData()">
     <header>
         <div>Inicio</div>
-        <div class="logo">LOGO</div>
+        <div class="logo"><img src="../../public/assets/img/logo.png" alt="" style="width: 50px"></div>
     </header>
     <div class="main-container">
         <div class="sidebar">
@@ -45,6 +45,7 @@
     </div>
     <script src="../../public/js/dashboard-js/dashboard.js"></script>
     <script src="../../public/js/dashboard-js/facturas.js"></script>
+    <script src="../../public/js/dashboard-js/salidas.js"></script>
 </body>
 
 </html>
