11/04/2025 Generación de reportes de inventario casi lista
Ya se han agregado los métodos necesarios para el reporte del inventario en formato excel o PDF, solo queda afinar algunos errores.

--- a/views/configuration-panel/productos-admin.html
+++ b/views/configuration-panel/productos-admin.html
@@ -7,7 +7,8 @@
         </button>
     </div>
     <div class="search-bar">
-        <input id="search-bar" type="text" placeholder="Buscar productos..." onkeydown="checkEmpty(event, 7)" oninput="checkEmpty(event, 7)">
+        <input id="search-bar" type="text" placeholder="Buscar productos..." onkeydown="checkEmpty(event, 7)"
+            oninput="checkEmpty(event, 7)">
     </div>
     <div class="filters">
         <select id="selectPageSize" onchange="filterTable(7)">
@@ -24,6 +25,14 @@
             <option value="1">Activo</option>
             <option value="0">Inactivo</option>
         </select>
+
+        <button id="btn-pdf" class="btn btn-primary me-2" value="1" onclick="generarReporte(this.value)">
+            <i class="material-icons">picture_as_pdf</i> Generar PDF
+        </button>
+        <button id="btn-excel" class="btn btn-excel" value="2" onclick="generarReporte(this.value)">
+            <i class="material-icons">table_chart</i> Generar Excel
+        </button>
+
         <button class="close-btn" style="float: right;" onclick="limpiarDIV()">Cerrar</button>
     </div>
     <table>
@@ -64,7 +73,7 @@
                 <select type="text" id="unidadMedicion" name="unidadMedicion" required>
                     <option value="Unidad">Unidad</option>
                     <option value="Kilogramo">Kilogramo</option>
-                    <option value="Gramo">Gramo</option>   
+                    <option value="Gramo">Gramo</option>
                     <option value="Litro">Litro</option>
                     <option value="Mililitro">Mililitro</option>
                     <option value="Onza">Onza</option>
