--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -46,6 +46,7 @@
     <script src="../../public/js/dashboard-js/dashboard.js"></script>
     <script src="../../public/js/dashboard-js/facturas.js"></script>
     <script src="../../public/js/dashboard-js/salidas.js"></script>
+    <script src="../../public/js/dashboard-js/productos.js"></script>
 </body>
 
 </html>
